--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API = https://draw-todo-server.herokuapp.com/
+REACT_APP_IMAGE_UPLOAD_URL = https://api.imgbb.com/1/upload?key=86ce17b11f8956bc5b52ed812a57ddf0
